--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/logo/IGA-LOGO.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +11,41 @@
   <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&display=swap" rel="stylesheet">
 
   <title>Iga Productos</title>
+
+  <meta name="description"
+    content="Venta de equipos de seguridad industrial. Compra en línea con envios nacionales e internacionales.">
+  <meta name="keywords"
+    content="equipos de seguridad industrial, cascos dielectricos, cascos de coraza, cascos de cachucha, cascos cachucha plagosur, lentes de seguridad, barboquejos, Iga Productos, ">
+  <meta name="author" content="Iga Productos">
+
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Iga Productos" />
+  <meta property="og:description"
+    content="Venta de equipos de seguridad industrial. Compra en línea con envios nacionales e internacionales." />
+  <meta property="og:image" content="./src/assets/logo/IGA-LOGO.webp" />
+  <meta property="og:url" content="https://igaproductos.com" />
+  <meta property="og:locale" content="es_MX" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="IGA Productos" />
+  <meta name="twitter:description" content="Equipos de seguridad industrial en línea." />
+  <meta name="twitter:image" content="./src/assets/logo/IGA-LOGO.webp" />
+
+  <link rel="icon" type="image/svg+xml" href="./src/assets/logo/IGA-LOGO.webp" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C2BPDW7TJL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-C2BPDW7TJL');
+  </script>
+
+  <link rel="canonical" href="https://igaproductos.com/" />
 </head>
 
 <body class="font-[Roboto]">
