--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta name="twitter:description" content="Equipos de seguridad industrial en línea." />
   <meta name="twitter:image" content="./src/assets/logo/IGA-LOGO.webp" />
 
-  <link rel="icon" type="image/svg+xml" href="./src/assets/logo/IGA-LOGO.webp" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.png" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-C2BPDW7TJL"></script>
